@@ -5,8 +5,6 @@ The points listed with a '+' indicate potential sub-projects (contributions will
 
 General
 
-- provide Program, Shlib, Staticlib functions?
-
 - give the pkg-config binary path
 - global module repository to avoid re-doing "import"
 - refactor the environment thing
